--- a/Files/CSS/theme.css
+++ b/Files/CSS/theme.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
 * {
     --bg-color: rgb(185, 0, 0);
+    --rainbow: linear-gradient(90deg in hsl longer hue, red 0 50%) 0/200%;
 }
 
 .quicksand-500 {
@@ -50,25 +51,40 @@ body {
     z-index: -1;
 }
 
-.text {
+.text-outline{
     -webkit-text-stroke: 3px transparent;
     -webkit-text-fill-color: #ffffff;
     background: black;
     -webkit-background-clip: text;
 }
 
-.gold-text {
+.gold-text-outline {
     -webkit-text-stroke: 3px transparent;
     -webkit-text-fill-color: #000;
     background: linear-gradient(#ffb455,#f99205);
     -webkit-background-clip: text;
 }
 
-.logo-small{
+.rainbow-text-outline {
+    
+    -webkit-text-fill-color: rgba(0,0,0,0);
+    background: var(--rainbow);
+    -webkit-background-clip: text;
+    animation: rainbow 4s linear infinite;
+}
+
+.only-text-outline{
+    -webkit-text-stroke: 4px transparent;
+    -webkit-text-fill-color: #000000;
+    background: black;
+    -webkit-background-clip: text;
+}
+
+.logo-small {
     width: 12.5%;
 }
 
-.main{
+.main {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -77,9 +93,69 @@ body {
     height: 100%;
 }
 
+#soon-text {
+    display: grid;
+    width: 200px;
+    text-align: center;
+}
+
+#text, #outline {
+    grid-column: 1;
+    grid-row: 1;
+}
+
+#text {
+    z-index: 2;
+}
+
+wavy {
+    animation: wavey 1s ease-in-out infinite;
+    display: inline-block;
+}
+
+/* This has me in pain ._. */
+wavy:nth-child(1) {
+    animation-delay: 0.0s;
+ }
+wavy:nth-child(2) {
+    animation-delay: 0.1s;
+ }
+wavy:nth-child(3) {
+    animation-delay: 0.2s;
+ }
+wavy:nth-child(4) {
+    animation-delay: 0.3s;
+ }
+wavy:nth-child(5) {
+    animation-delay: 0.4s;
+ }
+wavy:nth-child(6) {
+    animation-delay: 0.5s;
+ }
+wavy:nth-child(7) {
+    animation-delay: 0.6s;
+ }
+ 
 /* Animations */
 @keyframes scrolling-pattern {
     100% {
         mask-position: -150px 150px;
     }
-  }
+}
+
+@keyframes wavey {
+    0% {
+       transform: translateY(0px);
+    }
+    50% {
+        transform: translateY(10px);
+    }
+    100% {
+       transform: translateY(0px);
+    }
+}
+
+/* https://gist.github.com/ajaegers/52a82619cc191f898ec4 */
+@keyframes rainbow {
+    to {background-position: 100%}
+}
