Move things around

--- a/Files/CSS/404.css
+++ b/Files/CSS/404.css
@@ -1,3 +1,12 @@
+.main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+}
+
 .four-zero-four {
     width: 40%;
     display: grid;
@@ -25,6 +34,16 @@
 
 #error-image {
     -webkit-animation: slow-rainbow 240s linear infinite;
+}
+
+#soon-text {
+    display: grid;
+    width: 100%;
+    text-align: center;
+}
+
+.logo-small {
+    width: 12.5%;
 }
 
 @keyframes slow-rainbow {
