--- a/Files/CSS/test.css
+++ b/Files/CSS/test.css
@@ -1,5 +1,11 @@
+body {
+    display: flex;
+    justify-content: center;
+}
+
 .main {
     background-color: var(--shop-card-bg);
     border: 3px solid var(--shop-card-b);
     border-radius: 5px;
+    width: 50%;
 }
