--- a/Files/CSS/404.css
+++ b/Files/CSS/404.css
@@ -1,3 +1,11 @@
+html {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
 .main {
     display: flex;
     align-items: center;
