--- a/Files/CSS/index.css
+++ b/Files/CSS/index.css
@@ -1,10 +1,20 @@
+html {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+body {
+    min-width: 100%;
+}
+
 .main {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    width: 100%;
-    height: 100%;
 }
 
 .logo-small {
