--- a/Files/CSS/theme.css
+++ b/Files/CSS/theme.css
@@ -14,8 +14,7 @@
 }
 
 html {
-    height: 100%;
-    overflow: hidden;
+    height: fit-content;
 }
 
 body {
@@ -26,8 +25,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    width: 100%;
-    height: 100%;
+    margin: 0;
 
     /* Font Stuff */
     color: white;
