--- a/Files/CSS/test.css
+++ b/Files/CSS/test.css
@@ -7,5 +7,24 @@ body {
     background-color: var(--shop-card-bg);
     border: 3px solid var(--shop-card-b);
     border-radius: 5px;
-    width: 50%;
+    background-color: revert-layer;
+    backdrop-filter: blur(3px) brightness(0.6);
+    width: 60%;
+    margin: 2em;
+    display: grid;
+}
+
+.background-pattern-static, #content {
+    grid-column: 1;
+    grid-row: 1;
+}
+
+#content {
+    padding: 1em;
+}
+
+.background-pattern-static {
+    width: 100%;
+    -webkit-mask-image: url(/Files/Images/Patterns/Stripes.png);
+    mask-image: url(/Files/Images/Patterns/Stripes.png);
 }
