--- a/Files/CSS/FAQs.css
+++ b/Files/CSS/FAQs.css
@@ -2,12 +2,11 @@
 html {
     height: 100%;
     display: flex;
-    justify-content: center;
 }
 body {
     display: flex;
-    justify-content: center;
     background: #111;
+    width: 100%;
 }
 
 a {
@@ -37,6 +36,9 @@ a {
 
 #content {
     padding: 1em;
+    display: flex;
+    overflow: scroll;
+    width: 59em;
 }
 
 .background-pattern-static {
@@ -86,6 +88,15 @@ a {
     margin: 0;
     display: grid;
   align-items: center;
+}
+
+.row {
+    margin: 0.2em;
+}
+
+.row div {
+    margin-top: 0.4em;
+    margin-bottom: 0.4em;
 }
 
 /* Animations */
