--- a/Files/CSS/FAQs.css
+++ b/Files/CSS/FAQs.css
@@ -1,4 +1,3 @@
-
 html {
     height: 100%;
     display: flex;
@@ -97,6 +96,10 @@ a {
 .row div {
     margin-top: 0.4em;
     margin-bottom: 0.4em;
+}
+
+::-webkit-scrollbar {
+    display: none;
 }
 
 /* Animations */
